force-app/main/default/objects/Activation_line__c/fields/Primary_or_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Primary_or_Secondary__c</fullName>
    <label>Primary or Secondary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_or_Secondary</valueSetName>
    </valueSet>
</CustomField>