force-app/main/default/objects/Activation_line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>IF( ISBLANK(Order_Product__r.PricebookEntry.Product2.Name) , Manual_Product__r.Name , Order_Product__r.PricebookEntry.Product2.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product name from Telia&apos;s B2B product portfolio</inlineHelpText>
    <label>Product</label>
    <type>Text</type>
</CustomField>