force-app/main/default/objects/Activation_line__c/fields/Product_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_1__c</fullName>
    <formula>Quote_line__r.SBQQ__ProductCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Product Code</label>
    <type>Text</type>
</CustomField>