force-app/main/default/objects/Activation_line__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Internal fieldfor reporting purposes to filter out specific products</description>
    <formula>Order_Product__r.PricebookEntry.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>