force-app/main/default/objects/Activation_line__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Formula to display the Product Family from the related Quote Line</description>
    <formula>TEXT(Quote_line__r.SBQQ__Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>