force-app/main/default/objects/Activation_line__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <description>Used on UC invoice report for Activation to have code used in billing system</description>
    <formula>Activation__r.Case__r.Product__r.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product SKU as entered on Product - only your administrator has access to update this</inlineHelpText>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>