force-app/main/default/objects/Activation_line__c/fields/Product_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Subscription_Type__c</fullName>
    <formula>text( Manual_Product__r.SBQQ__SubscriptionType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Subscription Type</label>
    <type>Text</type>
</CustomField>