force-app/main/default/objects/Activation_line__c/fields/Protection_Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Protection_Circuit_ID__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>Protection Circuit ID</label>
    <type>TextArea</type>
</CustomField>