force-app/main/default/objects/Activation_line__c/fields/QoS_Realtime__c.field-meta.xml
<CustomField>
    <fullName>QoS_Realtime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Amount of bandwidth dedicated to Real Time traffic</inlineHelpText>
    <label>QoS Realtime or Premium</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Name</field>
            <operation>contains</operation>
            <value>QoS</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activations lines (QoS Realtime)</relationshipLabel>
    <relationshipName>Activations_lines6</relationshipName>
    <type>Lookup</type>
</CustomField>