force-app/main/default/objects/Activation_line__c/fields/Quick_Launch__c.field-meta.xml
<CustomField>
    <fullName>Quick_Launch__c</fullName>
    <inlineHelpText>Used for 4G Datanet</inlineHelpText>
    <label>Quick Launch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quick_Launch</valueSetName>
    </valueSet>
</CustomField>