force-app/main/default/objects/Activation_line__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <formula>Activation__r.Case__r.Activation_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Id</label>
    <type>Text</type>
</CustomField>