force-app/main/default/objects/Activation_line__c/fields/Quote_line__c.field-meta.xml
<CustomField>
    <fullName>Quote_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quote line that this activation is a result of</description>
    <inlineHelpText>The quote line that was sold to initiate activation of this line item.</inlineHelpText>
    <label>Quote line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Activations lines (Quote line)</relationshipLabel>
    <relationshipName>Activations_lines</relationshipName>
    <type>Lookup</type>
</CustomField>