force-app/main/default/objects/Activation_line__c/fields/Quote_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_ID__c</fullName>
    <formula>CASESAFEID(Quote_line__c)</formula>
    <label>Quote Line ID</label>
    <type>Text</type>
</CustomField>