force-app/main/default/objects/Activation_line__c/fields/Quote_line_quantity__c.field-meta.xml
<CustomField>
    <fullName>Quote_line_quantity__c</fullName>
    <formula>Quote_line__r.SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote line quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>