force-app/main/default/objects/Activation_line__c/fields/RCC_Owner_Control__c.field-meta.xml
<CustomField>
    <fullName>RCC_Owner_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used for data gathering reports and RPA.</description>
    <inlineHelpText>Select which level of owner control the subsription need.</inlineHelpText>
    <label>RCC Owner Control</label>
    <type>Checkbox</type>
</CustomField>