force-app/main/default/objects/Activation_line__c/fields/Redundancy__c.field-meta.xml
<CustomField>
    <fullName>Redundancy__c</fullName>
    <description>To accommodate order form to tech</description>
    <inlineHelpText>Set by Sales Specialist</inlineHelpText>
    <label>Redundancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Redundancy</valueSetName>
    </valueSet>
</CustomField>