force-app/main/default/objects/Activation_line__c/fields/Sales_type__c.field-meta.xml
<CustomField>
    <fullName>Sales_type__c</fullName>
    <description>Is this activation line a renewal of an already existing subscription, or is it new in Telia. Set by flow from Quote Line</description>
    <inlineHelpText>Is this activation line a renewal of an already existing subscription, or is it new in Telia?</inlineHelpText>
    <label>Sales type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>