force-app/main/default/objects/Activation_line__c/fields/SBC_1__c.field-meta.xml
<CustomField>
    <fullName>SBC_1__c</fullName>
    <label>SBC 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>