force-app/main/default/objects/Activation_line__c/fields/SBC_2__c.field-meta.xml
<CustomField>
    <fullName>SBC_2__c</fullName>
    <label>SBC 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>