force-app/main/default/objects/Activation_line__c/fields/Secondary_LAN_IP__c.field-meta.xml
<CustomField>
    <fullName>Secondary_LAN_IP__c</fullName>
    <description>Used in onboarding portal for Internet Pro</description>
    <label>Secondary LAN IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>