force-app/main/default/objects/Activation_line__c/fields/Services_on_Line__c.field-meta.xml
<CustomField>
    <fullName>Services_on_Line__c</fullName>
    <description>Comma separated list of services. Formula removes the first 2 characters to ensure it doesn&apos;t start with &apos;, &apos; - no matter which service is the first to be true.</description>
    <formula>TRIM(
RIGHT(
IF(VAS_FIX2MOBIL__c=true, &apos;, F2M&apos;, &apos;&apos;) &amp;
IF(VAS_MAXBTB__c=true, &apos;, Max Standard&apos;, &apos;&apos;) &amp;
IF(VAS_MAXSPORTB__c=true, &apos;, Max Standard + Sport&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBTB11__c=true, &apos;, SIM 1&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBX5__c=true, &apos;, SIM 2&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBX6__c=true, &apos;, SIM 3&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBX7__c=true, &apos;, SIM 4&apos;, &apos;&apos;) &amp;
IF(VAS_DUMMY2__c=true, &apos;, Corporate APN Bruger&apos;, &apos;&apos;) &amp;
IF(VAS_OCMUSR__c=true, &apos;, MS Teams Phone Mobile Bruger&apos;, &apos;&apos;) &amp;
IF(VAS_EntitleAW__c=true, &apos;, eSIM&apos;, &apos;&apos;)
, (LEN(
IF(VAS_FIX2MOBIL__c=true, &apos;, F2M&apos;, &apos;&apos;) &amp;
IF(VAS_MAXBTB__c=true, &apos;, Max Standard&apos;, &apos;&apos;) &amp;
IF(VAS_MAXSPORTB__c=true, &apos;, Max Standard + Sport&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBTB11__c=true, &apos;, SIM 1&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBX5__c=true, &apos;, SIM 2&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBX6__c=true, &apos;, SIM 3&apos;, &apos;&apos;) &amp;
IF(VAS_SIMBX7__c=true, &apos;, SIM 4&apos;, &apos;&apos;) &amp;
IF(VAS_DUMMY2__c=true, &apos;, Corporate APN Bruger&apos;, &apos;&apos;) &amp;
IF(VAS_OCMUSR__c=true, &apos;, MS Teams Phone Mobile Bruger&apos;, &apos;&apos;) &amp;
IF(VAS_EntitleAW__c=true, &apos;, eSIM&apos;, &apos;&apos;)
) - 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services on Line</label>
    <type>Text</type>
</CustomField>