force-app/main/default/objects/Activation_line__c/fields/Shortnr__c.field-meta.xml
<CustomField>
    <fullName>Shortnr__c</fullName>
    <label>Shortnr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>