force-app/main/default/objects/Activation_line__c/fields/Show_On_Onboarding_Page__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Onboarding_Page__c</fullName>
    <formula>IF( OR(ISPICKVAL( Quote_line__r.SBQQ__Product__r.Family ,&apos;Mobile Subscription (Corporate)&apos;), 
       ISPICKVAL( Quote_line__r.SBQQ__Product__r.Family ,&apos;Mobile Subscription&apos;), 
       ISPICKVAL( Quote_line__r.SBQQ__Product__r.Family ,&apos;M2M Subscription&apos;), 
       ISPICKVAL( Quote_line__r.SBQQ__Product__r.Family ,&apos;Touchpoint&apos;) , 
       ISPICKVAL( Quote_line__r.SBQQ__Product__r.Family ,&apos;Functions TPX&apos;) , 
       ISPICKVAL( Quote_line__r.SBQQ__Product__r.Family ,&apos;Mobile Subscription TPX&apos;), 
       CONTAINS(Product_Code__c,&apos;12111&apos;)),
   true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show On Onboarding Page</label>
    <type>Checkbox</type>
</CustomField>