force-app/main/default/objects/Activation_line__c/fields/SIM_number__c.field-meta.xml
<CustomField>
    <fullName>SIM_number__c</fullName>
    <inlineHelpText>If Customer has already received Telia SIM cards and would like to activate these then use this field to enter the SIM card number</inlineHelpText>
    <label>SIM number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>