force-app/main/default/objects/Activation_line__c/fields/Single_No__c.field-meta.xml
<CustomField>
    <fullName>Single_No__c</fullName>
    <inlineHelpText>Enter the quantity of number series that needs to be invoiced on this specific number</inlineHelpText>
    <label>Single No.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>