force-app/main/default/objects/Activation_line__c/fields/Single_Number__c.field-meta.xml
<CustomField>
    <fullName>Single_Number__c</fullName>
    <label>Single Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>