force-app/main/default/objects/Activation_line__c/fields/SIP_ID__c.field-meta.xml
<CustomField>
    <fullName>SIP_ID__c</fullName>
    <label>SIP ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>