force-app/main/default/objects/Activation_line__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>The SLA product for this activation line</description>
    <inlineHelpText>The SLA product for this activation line</inlineHelpText>
    <label>SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>