force-app/main/default/objects/Activation_line__c/fields/SLA_product_code__c.field-meta.xml
<CustomField>
    <fullName>SLA_product_code__c</fullName>
    <description>The product code of the SLA product for use in workflow field updates that calculate the amount of different products used.</description>
    <formula>SLA_x__r.ProductCode</formula>
    <label>SLA product code</label>
    <type>Text</type>
</CustomField>