force-app/main/default/objects/Activation_line__c/fields/SLA_specifications__c.field-meta.xml
<CustomField>
    <fullName>SLA_specifications__c</fullName>
    <formula>SLA_x__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA specifications</label>
    <type>Text</type>
</CustomField>