force-app/main/default/objects/Activation_line__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>IF(
ISPICKVAL(SLA_Trigger__c, &quot;Red&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;, 16, 16),
IF(
ISPICKVAL(SLA_Trigger__c, &quot;Yellow&quot;),
IMAGE(&quot;/img/msg_icons/warning24.png&quot;, &quot;Yellow&quot;, 16, 16),
IF(
ISPICKVAL(SLA_Trigger__c, &quot;Green&quot;),
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Green&quot;, 16, 16),
IMAGE(&quot;/img/s.gif&quot;, &quot;NA&quot;, 16, 16)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>