force-app/main/default/objects/Activation_line__c/fields/SLA_Trigger__c.field-meta.xml
<CustomField>
    <fullName>SLA_Trigger__c</fullName>
    <description>This field controls the field &quot;SLA Status&quot;, which is used to display if an SLA is breached or not.</description>
    <label>SLA Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#33FF33</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#3333FF</color>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>