force-app/main/default/objects/Activation_line__c/fields/SLA_x__c.field-meta.xml
<CustomField>
    <fullName>SLA_x__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for relating the aa SLA to the activation line</description>
    <inlineHelpText>Please select the SLA product på to apply to the subscription</inlineHelpText>
    <label>SLA product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Name</field>
            <operation>contains</operation>
            <value>SLA, Service, Support</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activations lines (SLA)</relationshipLabel>
    <relationshipName>Activations_lines5</relationshipName>
    <type>Lookup</type>
</CustomField>