force-app/main/default/objects/Activation_line__c/fields/SNMP_address_mask__c.field-meta.xml
<CustomField>
    <fullName>SNMP_address_mask__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>SNMP address/mask</label>
    <type>TextArea</type>
</CustomField>