force-app/main/default/objects/Activation_line__c/fields/SNMP_community__c.field-meta.xml
<CustomField>
    <fullName>SNMP_community__c</fullName>
    <description>To accommodate order form to tech</description>
    <label>SNMP community</label>
    <type>TextArea</type>
</CustomField>