force-app/main/default/objects/Activation_line__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>How far along the activation of this line item has progressed</description>
    <inlineHelpText>How far along the activation of this line item has progressed</inlineHelpText>
    <label>Activation progress</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activation_line_progress</valueSetName>
    </valueSet>
</CustomField>