force-app/main/default/objects/Activation_line__c/fields/Sub_Circuit__c.field-meta.xml
<CustomField>
    <fullName>Sub_Circuit__c</fullName>
    <label>Sub Circuit</label>
    <type>TextArea</type>
</CustomField>