force-app/main/default/objects/Activation_line__c/fields/Subscriber_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Id__c</fullName>
    <description>RPA will update the value after activation is completed</description>
    <externalId>true</externalId>
    <label>Subscriber Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>