force-app/main/default/objects/Activation_line__c/fields/Supervisor_No__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_No__c</fullName>
    <inlineHelpText>Enter the quantity that needs to be invoiced</inlineHelpText>
    <label>Supervisor No.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>