force-app/main/default/objects/Activation_line__c/fields/TDC_eVPN__c.field-meta.xml
<CustomField>
    <fullName>TDC_eVPN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark if the Vendor is TDC eVPN</inlineHelpText>
    <label>TDC eVPN</label>
    <type>Checkbox</type>
</CustomField>