force-app/main/default/objects/Activation_line__c/fields/Telia_INSIGHT_e_mail_contact__c.field-meta.xml
<CustomField>
    <fullName>Telia_INSIGHT_e_mail_contact__c</fullName>
    <inlineHelpText>This field must always be filled in with the Telia INSIGHT contact person.</inlineHelpText>
    <label>Telia INSIGHT e-mail contact</label>
    <type>Email</type>
</CustomField>