force-app/main/default/objects/Activation_line__c/fields/Telia_til_Telia_transfer__c.field-meta.xml
<CustomField>
    <fullName>Telia_til_Telia_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permission given for transfer within Telia</description>
    <inlineHelpText>Permission given for transfer within Telia</inlineHelpText>
    <label>Telia til Telia transfer</label>
    <type>Checkbox</type>
</CustomField>