force-app/main/default/objects/Activation_line__c/fields/TOP_Activation_Flow_Step__c.field-meta.xml
<CustomField>
    <fullName>TOP_Activation_Flow_Step__c</fullName>
    <description>Used to store current flow step during TOP activation process when clicked &quot;Save to continue later&quot;</description>
    <inlineHelpText>Used to store current flow step during TOP activation process when clicked &quot;Save to continue later&quot;</inlineHelpText>
    <label>TOP Activation Flow Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>