force-app/main/default/objects/Activation_line__c/fields/TOP_Completed_Flows__c.field-meta.xml
<CustomField>
    <fullName>TOP_Completed_Flows__c</fullName>
    <description>Comma separated list of completed TOP activation flow ids</description>
    <inlineHelpText>Comma separated list of completed TOP activation flow ids</inlineHelpText>
    <label>TOP Completed Flows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>