force-app/main/default/objects/Activation_line__c/fields/Touchpoint_Bruger__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Bruger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used for data gathering reports and data loader script.</description>
    <inlineHelpText>Select whether Touchpoint Bruger is a active SOC or a future SOC.</inlineHelpText>
    <label>Touchpoint Bruger</label>
    <type>Checkbox</type>
</CustomField>