force-app/main/default/objects/Activation_line__c/fields/Touchpoint_Services_on_Line__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Services_on_Line__c</fullName>
    <formula>TRIM(
RIGHT(
IF(Touchpoint_Bruger__c=true, &apos;, Touchpoint User&apos;, &apos;&apos;) &amp;
IF(Touchpoint_Receptionist__c=true, &apos;, Touchpoint Receptionist&apos;, &apos;&apos;) &amp;
IF(Touchpoint_Softphone__c=true, &apos;, Touchpoint Softphone&apos;, &apos;&apos;) &amp;
IF(Touchpoint_Statistik__c=true, &apos;, Touchpoint Statistik&apos;, &apos;&apos;) &amp;
IF(Supervisor__c=true, &apos;, Supervisor&apos;, &apos;&apos;) &amp;
IF(Attendant_Agent_login__c=true, &apos;, Attendant Agent login&apos;, &apos;&apos;) &amp;
IF(VAS_TPXRECB__c=true, &apos;, Call Recording Basic&apos;, &apos;&apos;) &amp;
IF(VAS_TPXREC3__c=true, &apos;, Call Recording 3 years&apos;, &apos;&apos;) &amp;
IF(VAS_TPXREC7__c=true, &apos;, Call Recording 7 years&apos;, &apos;&apos;)
, (LEN(
IF(Touchpoint_Bruger__c=true, &apos;, Touchpoint User&apos;, &apos;&apos;) &amp;
IF(Touchpoint_Receptionist__c=true, &apos;, Touchpoint Receptionist&apos;, &apos;&apos;) &amp;
IF(Touchpoint_Softphone__c=true, &apos;, Touchpoint Softphone&apos;, &apos;&apos;) &amp;
IF(Touchpoint_Statistik__c=true, &apos;, Touchpoint Statistik&apos;, &apos;&apos;) &amp;
IF(Supervisor__c=true, &apos;, Supervisor&apos;, &apos;&apos;) &amp;
IF(Attendant_Agent_login__c=true, &apos;, Attendant Agent login&apos;, &apos;&apos;) &amp;
IF(VAS_TPXRECB__c=true, &apos;, Call Recording Basic&apos;, &apos;&apos;) &amp;
IF(VAS_TPXREC3__c=true, &apos;, Call Recording 3 years&apos;, &apos;&apos;) &amp;
IF(VAS_TPXREC7__c=true, &apos;, Call Recording 7 years&apos;, &apos;&apos;)
) - 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Touchpoint Services on Line</label>
    <type>Text</type>
</CustomField>