force-app/main/default/objects/Activation_line__c/fields/Touchpoint_Statistik__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Statistik__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used for data gathering reports and data loader script.</description>
    <inlineHelpText>Select whether the Touchpoint Statistik is a active SOC or a future SOC</inlineHelpText>
    <label>Touchpoint Statistik</label>
    <type>Checkbox</type>
</CustomField>